--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,3 +1,11 @@
+.main-section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  width: 100%; /* Asegura que cada sección ocupe todo el ancho disponible */
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -7,56 +15,47 @@ body {
   }
   
   nav {
-    @include flex-layout(row, space-between, center);
     background-color: $background-color;
-    width: 100%;
+    width: auto;
     padding: 10px;
+    @include flex-layout(row, space-between, center); 
     color: $primary-text-color;
-  
-    .icons img{
-      width: 18px;
-      height: 18px;
-    }
-
     .menu-icon {
-      display: block;
-    }
-  
+        img {
+          width: 18px;
+          height: 18px;
+        }
+      }
     p {
-      @include typography($size: 1.5rem); // Solo se pasa el tamaño
-      padding-left: 30px;
+        font-size: 1.5em;
+        padding-left: 30px;
     }
-  
+    
     .logo {
-      @include flex-layout($justify: center); // Solo se pasa la justificación
-  
-      img {
-        @include image-resize($width: 104px, $height: 47px); // Solo se pasa el ancho y alto
-      }
+        img {
+          width: 38px;
+        }
     }
-  
     .nav-links {
-      display: none;
-    }
-  
-    .icon {
-      @include flex-layout($align: center); // Solo se pasa la alineación
-    //  gap: 15px;
-
-      width: 18px;
-      height: 18px;
-  
-      p {
-        @include typography($size: 1rem, $marginRight: 0.5rem); // Solo se pasa el tamaño y margen derecho
-      }
-  
-      .login-text {
         display: none;
       }
-  
-      .login-icon {
-        display: flex;
-      }
+    
+    .icons {
+      @include flex-layout(row, flex-start, center); 
+        gap: 15px;
+        p {
+          margin-right: 0.5rem;
+        }
+        .login-text {
+            display: none;
+        }
+        .login-icon {
+            display: flex;
+        }
+        img {
+          width: 18px;
+          height: 18px;
+        }
     }
   }
   
@@ -67,7 +66,32 @@ body {
     border-radius: var(--Spacing-2, 8px);
     border: 1px solid var(--Color-Blue-Blue-5, #6887D8);
     background: var(--Color-button-background-primary, #A4B7E8);
+   
+    &:hover {
+      background: $accent-color;
+      color: white; /* Asegura que el texto sea blanco también en hover */
+    }
+    // Pressed
+    &:active {
+      background: var(--Color-Blue-Blue-8, #2D3B62);
+      color: white; /* Asegura que el texto sea blanco también en active */
+    }
+  
+     &:focus {
+    background: var(--Color-Blue-Blue-8, #2D3B62); /* Mismo color que el estado active */
+    color: white;
+    outline: none; /* Remueve el borde predeterminado que algunos navegadores aplican */
   }
+    // Disabled
+    &:disabled,
+    &.disabled {
+      background: var(--Color-Neutral-Neutral-5, #B8B8B8);
+      color: white; /* Texto blanco cuando está deshabilitado */
+      cursor: not-allowed; /* Cambia el cursor para indicar que no es clicable */
+      border: 1px solid var(--Color-Neutral-Neutral-5, #B8B8B8); /* Opcional: hacer que el borde también esté deshabilitado */
+  }
+
+}
   
   .secondary-enabled-button {
     @include flex-layout(row, flex-end, center);
@@ -77,6 +101,30 @@ body {
     border-radius: var(--Spacing-2, 8px);
     border: 1px solid var(--Color-Blue-Blue-8, #2D3B62);
     background: var(--Color-button-label-primary, #F8F8F8);
+
+    &:hover {
+      background: var(--Color-Neutral-Neutral-2, #E3E3E3);
+      color: $primary-text-color; 
+    }
+    // Pressed
+    &:active {
+      background: var(--Color-Blue-Blue-8, #2D3B62);
+      color: white; /* Asegura que el texto sea blanco también en active */
+    }
+  
+     &:focus {
+    background: var(--Color-Blue-Blue-8, #2D3B62); /* Mismo color que el estado active */
+    color: white;
+    outline: none; /* Remueve el borde predeterminado que algunos navegadores aplican */
+  }
+    // Disabled
+    &:disabled,
+    &.disabled {
+      background: var(--Color-Neutral-Neutral-5, #B8B8B8);
+      color: white; /* Texto blanco cuando está deshabilitado */
+      cursor: not-allowed; /* Cambia el cursor para indicar que no es clicable */
+      border: 1px solid var(--Color-Neutral-Neutral-5, #B8B8B8); /* Opcional: hacer que el borde también esté deshabilitado */
+  }
   }
   
   .input-decor {
@@ -148,50 +196,62 @@ body {
   }
   
   .features-section {
-    @include flex-layout($direction: column, $justify: flex-start, $align: center);
-    min-height: auto;
-    font-family: $font-stack;
-    background: url('../assets/svg/features-background.svg') no-repeat center center;
-    background-size: cover;
-    padding: 20px;
-    height: auto;
-    gap: 10px;
-    position: static; 
+    position: relative;
+    overflow: hidden;
+    height: 500px; /* Altura fija para el contenedor */
   
+    // Fondo SVG como imagen de fondo
+    background: url('../assets/svg/features-background.png') no-repeat center top;
+    background-size: 100% 500px; /* 100% de ancho, altura fija */
+   
     .features-content {
-    .feature {
-      @include flex-layout($direction: row, $align: center);
-      width: 310px;
-      padding: 7px 34px; 
-      height: 76px;
-  
-      .feature-image {
-        width: 62px;
-        height: 62px;
-        border-radius: 50%;
-        overflow: hidden;
-        margin-right: 38px;
-  
-        img {
-          @include image-resize(100%, 100%, cover);
+      min-height: auto;
+      @include typography($color: $primary-text-color, $size: 14px, $weight: 400, $lineHeight: 1.2, $align: center, $letter-spacing: normal);
+      padding: 20px;
+      @include flex-layout(column, center, center);
+      height: 457px;
+      gap: 10px;
+      position: relative;
+      z-index: 1; /* Asegura que el contenido esté encima del fondo */
+ 
+      .feature {
+        @include flex-layout(row, center, flex-start);
+        width: 310px;
+        padding: 7px 34px;
+        height: 76px;
+
+        .feature-image {
+          width: 62px;
+          height: 62px;
+          border-radius: 50%;
+          overflow: hidden;
+          margin-right: 38px; // Espacio entre la imagen y el texto
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
-      }
-  
-      .feature-text {
-        flex: 1;
-  
-        h3 {
-          @include typography($primary-text-color, 0.875rem, 700, 1.2, 0, left);
-          margin: 0;
-        }
-  
-        p {
-          @include typography($primary-text-color, 0.75rem, 400, 1.2, 38px, left);
+
+        .feature-text {
+          flex: 1;
+          @include flex-layout(column, center, flex-start);
+
+          h3 {
+            margin: 0;
+            @include typography($color: $primary-text-color, $size: 14px, $weight: 700, $lineHeight: 1.2, $align: left);
+          }
+
+          p {
+            @include typography($primary-text-color, 13.33px, 400, 120%, 0, left, normal);
+          }
         }
       }
     }
   }
-}
+
+ 
   
   .feedback-section {
     @include flex-layout(column, center, center);
@@ -351,6 +411,66 @@ body {
     }
   }
   
+.product-section {
+  
+  .product-card-list {
+    @include flex-layout($direction: row);
+    height: 307px;
+    padding: 12px;
+    gap: 12px;
+    overflow: hidden;
+
+    overflow-x: auto; //scroll horizontal
+    scroll-snap-type: x mandatory; // Ajuste de desplazamiento suave
+  //  -webkit-overflow-scrolling: touch;
+ 
+  .product-card {
+    display: flex;
+    width: 224px;
+    height: 272px;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    flex-shrink: 0;
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+ 
+    .card-image {
+      width: 224px;
+      height: 180px;
+      border-radius: var(--Spacing-spacing-s, 12px) var(--Spacing-spacing-s, 12px) 0px 0px;
+    }
+    .card-text{
+      @include flex-layout(column, space-between, flex-start);
+      gap: 8px;
+      width: 80%;
+      height: 72px;
+
+      .card-title {
+        @include typography($color: $primary-text-color, $size: 12px, $weight: 700, $lineHeight: 1.2, $align: left);  
+      }
+  
+      .card-info {
+        width: 100%;
+        height: 12px;
+        top: 20px;
+        white-space: nowrap;
+        text-overflow: ellipsis; // tres puntos al final
+        overflow: hidden; //evitar mostrarse todo el texto
+        @include typography($color: $primary-text-color, $size: 12px, $weight: 400, $lineHeight: 1.2, $align: left);
+      }
+  
+      .card-price {
+        padding-bottom: 8px;
+        @include typography($color: $primary-text-color, $size: 12px, $weight: 400, $lineHeight: 1.2, $align: left);
+      }
+  
+    }
+  }
+  }
+}
+
   .newsletter-section {
     width: 100%;
     @include flex-layout($direction: column);
@@ -384,14 +504,16 @@ body {
   
   .footer-section {
     @include flex-layout(column, center, center); // Aplicamos el diseño flexbox
-    background: url('../assets/svg/footer-mobile-background.svg') no-repeat center center;
-    background-size: cover; 
+    background: url('../assets/svg/footer-mobile-background.png') no-repeat center center;
+    background-size: 100% 600px; 
+    // background-size: cover; 
     margin-top: 30px;
     padding-top: 80px;
     
     .footer-content {
       @include flex-layout(column, center, stretch); // Aplicamos el diseño flexbox
-      gap: 32px;
+      gap: 26px;
+      padding-bottom: 30px;
 
       .footer-info {
       @include flex-layout(column, center, stretch); // Aplicamos el diseño flexbox
